# python-sem2

./: .gitignore  README.md
lab-01/: Dockerfile  pyproject.toml
lab-01/data/: tasks.jsonl
lab-01/src/: main.py
lab-01/src/contracts/: task.py  task_source.py
lab-01/src/inbox/: core.py
lab-01/src/sources/: __init__.py  api_stub.py  generator.py  jsonl.py  repository.py  stdin.py
lab-01/tests/: test_api_stub.py  test_generator.py  test_inbox.py  test_jsonl.py  test_task.py
lab-02/: Dockerfile  README.md  pyproject.toml
lab-02/src/: main.py
lab-02/src/sources/: api_stub.py  generator.py
lab-02/tests/: test_generator.py  test_inbox.py
lab-03/: Dockerfile  README.md  pyproject.toml
lab-03/data/: tasks.jsonl
lab-03/src/: main.py
lab-03/src/contracts/: descriptors.py  task.py
lab-03/src/inbox/: core.py  task_queue.py
lab-03/src/sources/: jsonl.py
lab-03/tests/: test_api_stub.py  test_jsonl.py  test_main.py  test_protocol.py  test_task.py
