[project]
name = "lab-03"
version = "0.1.0"
description = "Очередь задач: итераторы и генераторы"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0", # Typer для CLI
]

[project.scripts]
lab3 = "src.main:main" 

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"] 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"